syntax="proto2";
import "google/protobuf/any.proto";

message CommonRequest {
    required string username = 1;
    required string password = 2;
    optional string operation = 3;
    optional string encryption = 4;
    // for build
    optional string db_name = 5;
    optional string db_path = 6;
    // for load
    optional string load_csr = 7;
    // for drop
    optional string is_backup = 8;
    // for user manager
    optional string type = 9;
    optional string op_username = 10;
    optional string op_password = 11;
    // for user privilege
    optional string privileges = 12;
    // for backup
    optional string backup_path = 13;
    // for query
    optional string sparql = 14;
    optional string format = 15;
    // for begin
    optional string isolevel = 16;
    // for tquery
    optional string tid = 17;
    // for batch insert and remove
    optional string file = 18;
    // for query log and access log
    optional string date = 19;
    optional int32 pageNo = 20;
    optional int32 pageSize = 21;
    // for ip manage
    optional string ip_type = 22;
    optional string ips = 23;
    // for personalized function
    optional FunInfo funInfo = 24;
};

message UserInfo {
    optional string username = 1;
    optional string password = 2;
    optional string queryPrivilege = 3;
    optional string updatePrivilege = 4;
    optional string loadPrivilege = 5;
    optional string unloadPrivilege = 6;
    optional string backupPrivilege = 7;
    optional string restorePrivilege = 8;
    optional string exportPrivilege = 9;
};

message DBInfo {
    optional string database = 1;
    optional string creator = 2;
    optional string builtTime = 3;
    optional string status = 4;
};

message QueryHeadInfo {
    repeated string link = 1; 
    repeated string vars = 2;
};

message QueryResultInfo {
    repeated string bindings = 1;
};

message TxnLogInfo {
    optional string dbName = 1;
    optional string TID = 2;
    optional string user = 3;
    optional string beginTime = 4;
    optional string state = 5;
    optional string endTime = 6;
};

message QueryLogInfo {
    optional string QueryDateTime = 1;
    optional string Sparql = 2;
    optional string Format = 3;
    optional string RemoteIP = 4;
    optional string FileName = 5;
    optional int32 QueryTime = 6;
    optional int32 AnsNum = 7;
    optional string DbName = 8;
};

message AccessLogInfo {
    optional string ip = 1;
    optional string operation = 2;
    optional string createtime = 3;
    optional int32 code = 4;
    optional string msg = 5;
}

message IPManageInfo {
    optional string ipType = 1;
    repeated string ips = 2;
}

message FunInfo {
    optional string funName = 1;
    optional string funDesc = 2;
    optional string funArgs = 3;
    optional string funBody = 4;
    optional string funSubs = 5;
    optional string funStatus = 6;
    optional string funReturn = 7;
    optional string lastTime = 8;
}

message CommonResponse {
    optional int32 StatusCode = 1;
    optional string StatusMsg = 2;
    // for monitor showUser showDb
    repeated google.protobuf.Any ResponseBody = 3;
    // for query
    optional QueryHeadInfo head = 4;
    optional QueryResultInfo results = 5;
    optional int32 AnsNum = 6;
    optional int32 OutputLimit = 7;
    optional string ThreadId = 8;
    optional string QueryTime = 9;
    optional string FileName = 10;
    // for export
    optional string filepath = 11;
    // for begin
    optional string TID = 12;
    // for txnLog queryLog accessLog
    repeated google.protobuf.Any list = 13;
    // for getCoreVersion
    optional string CoreVersion = 14;
    optional string licensetype = 15;
    optional string RootPath = 16;
    // for batch insert and remove
    optional string successNum = 17;
    // for queryLog and accessLog
    optional int32 totalSize = 18;
    optional int32 totalPage = 19;
    optional int32 pageNo = 20;
    optional int32 pageSize = 21;
    // for backup
    optional string backupfilepath=22;
    // for personalized function
    optional string Result = 23;
    // for monitor
    optional string database = 24;
    optional string creator = 25;
    optional string builtTime = 26;
    optional string tripleNum = 27;
    optional int32 entityNum = 28;
    optional int32 literalNum = 29;
    optional int32 subjectNum = 30;
    optional int32 predicateNum = 31;
    optional int32 connectionNum = 32;
    // for login
    optional string type = 33;
    // for load
    optional string csr = 34;
};

service grpc {
     rpc api(CommonRequest) returns (CommonResponse);
     rpc shutdown(CommonRequest) returns (CommonResponse);
};